timestamp api completed!

--- a/timestamp.html
+++ b/timestamp.html
@@ -1,4 +1,66 @@
-<html><h1>TIMESTAMP MICROSERVICE</h1>
-    <p>github.com/callmekurisu</p></html>
-    <input type='text'</input><button>Test</button>
+
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+ <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" src="main.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    
+    <style>
+    #title{
+  text-shadow: -1px -1px 3px #AAA,
+                       1px 1px 3px #FFF;
+  box-shadow: 10px 10px 5px #888888;
+  color: black;
+  padding-top: 10px;
+  padding-bottom: 20px;
+  font-size: 20px;
+  font-family: "Sans";
+}
+.icon2 {
+  margin-left: 10px;
+  border-radius: 100%;
+  width: 40px;
+}
+#unix{
+  background-color:black;
+  margin-left:10px;
+}
+.format{
+  margin-left:10px;
+}
+.instructions{
+  margin-left:10px;
+  color: red;
+  font-size: 16px;
+}
+.ibackground{
+  background-color: #D0D0D0;
+  width: 30%;
+}
+  </style>
+</head>
+<div container>
+<body>
+    <div container id="header">
+    <h1 id="title"><a href="https://github.com/callmekurisu/timestamp" target="_blank">
+  <img class="icon2" src="https://assets-cdn.github.com/images/modules/open_graph/github-octocat.png"></img>
+  </a>TIMESTAMP MICRO SERVICE</h1>
+    <br></br>
+    <h2 class='format' class="usage">EXAMPLE USAGE:</h2>
+    <br></br>
+    <div container class="ibackground">
+    <li class='instructions'>localhost:5000/string/<b>December 26, 2016</b></p>
+    <li class='instructions'>localhost:5000/unix/1482746400000<b></b></p>
+    <dive container>
+</body>
+</div>
+<footer>
+  <br></br>
+  <p class='format'>Show some love to the WebDev </p>
+  <img class="icon2" src="https://bitcoin.org/img/icons/opengraph.png">1PsriNcWPmyuD2XxUXefU5HD3XPuQ8KXjA</br>
+</footer>
+
+
 </html>
