fixed html usage instructions

--- a/timestamp.html
+++ b/timestamp.html
@@ -51,8 +51,8 @@
     <h2 class='format' class="usage">EXAMPLE USAGE:</h2>
     <br></br>
     <div container class="ibackground">
-    <li class='instructions'>localhost:5000/string/<b>December 26, 2016</b></p>
-    <li class='instructions'>localhost:5000/unix/1482746400000<b></b></p>
+    <li class='instructions'>https://tranquil-dawn-62735.herokuapp.com/string/<b>December 26, 2016</b></p>
+    <li class='instructions'>https://tranquil-dawn-62735.herokuapp.com/unix/1482746400000<b></b></p>
     <dive container>
 </body>
 </div>
